--- a/overlay/Aperture/AndroidManifest.xml
+++ b/overlay/Aperture/AndroidManifest.xml
@@ -3,7 +3,7 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.lineageos.aperture.overlay.mondrian">
+    package="org.lineageos.aperture.overlay.diting">
     <overlay android:targetPackage="org.lineageos.aperture"
                    android:isStatic="true"
                    android:priority="700"/>
