--- a/overlay/SettingsProviderCN/AndroidManifest.xml
+++ b/overlay/SettingsProviderCN/AndroidManifest.xml
@@ -3,8 +3,10 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.providers.settings.overlay.mondrian">
+    package="com.android.providers.settings.overlay.diting">
     <overlay android:targetPackage="com.android.providers.settings"
                    android:isStatic="true"
-                   android:priority="700"/>
+                   android:priority="700"
+                   android:requiredSystemPropertyName="ro.boot.hwc"
+                   android:requiredSystemPropertyValue="CN"/>
 </manifest>
