--- a/overlay/SettingsProviderGL/AndroidManifest.xml
+++ b/overlay/SettingsProviderGL/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <!--
-     Copyright (C) 2024 The LineageOS Project
+     Copyright (C) 2022 The LineageOS Project
      SPDX-License-Identifier: Apache-2.0
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="android.overlay.mondrian">
-    <overlay android:targetPackage="android"
+    package="com.android.providers.settings.overlay.diting">
+    <overlay android:targetPackage="com.android.providers.settings"
                    android:isStatic="true"
-                   android:priority="800"
+                   android:priority="700"
                    android:requiredSystemPropertyName="ro.boot.hwc"
                    android:requiredSystemPropertyValue="GL"/>
 </manifest>
